<resources>
    <string name="app_name">Home Dashboard</string>
    <string name="action_settings">Settings</string>
    <string name="empty"></string>
    <string name="main_applications">Installed applications</string>
    <string name="main_store">Available applications</string>
    <string name="main_devices">Connected devices</string>
    <string name="main_config">Dashboard</string>
    <string name="main_users">Users</string>
    <string name="applications_title">Installed applications</string>
    <string name="store_title">Applications Store</string>
    <string name="config_title">Permissions</string>
    <string name="devices_title">Connected devices</string>
    <string name="users_title">Connected users</string>
    <string name="settings_title">Settings</string>
    <string name="login_title">Connection</string>
    <string name="main_cse">Dashboard is </string>
    <string name="main_cse_state">Status</string>
    <string name="main_cse_fw">Firmware</string>
    <string name="main_cse_state_ok">is connected</string>
    <string name="main_cse_state_warning">is partially operational</string>
    <string name="main_cse_state_error">is not connected</string>
    <string name="main_cse_state_not_detected">is not detected</string>
    <string name="main_cse_state_not_connected">is not connected</string>
    <string name="main_btn_apps">apps</string>
    <string name="main_btn_config">permissions</string>
    <string name="main_btn_devs">add device</string>
    <string name="main_btn_usrs">add user</string>
    <string name="main_btn_delegate">delegate rights</string>
    <string name="main_btn_replace">replace device</string>
    <string name="main_login_titles">Login</string>
    <string name="main_login_needed">You are not logged in. See Settings.</string>
    <string name="main_login_wrong">Authentication failed. Retry...</string>
    <string name="main_subtitle_app">quick access to your installed applications</string>
    <string name="main_subtitle_dev">your connected devices by category</string>
    <string name="main_subtitle_store">new applications can be downloaded on your HAB</string>
    <string name="main_subtitle_config">the status of your HAB and permissions configuration</string>
    <string name="main_dev_cat">device(s)</string>
    <string name="main_dev_sup_cat" formatted="false">there is %sup% other category(ies)</string>
    <string name="main_app_sup" formatted="false">there is %sup% other application(s)</string>
    <string name="main_config_action">configure permissions</string>
    <string name="main_store_intro">For new features and optimize your installation, you can download new applications from the Applications Store</string>
    <string name="main_store_go">access the store</string>
    <string name="card_cpu">CPU:</string>
    <string name="card_ram">RAM:</string>
    <string name="device_type_name">type</string>
    <string name="device_name">name</string>
    <string name="device_description">description</string>
    <string name="device_btn_detail">details</string>
    <string name="device_show_details">more details</string>
    <string name="device_remove_asso" formatted="false">remove association</string>
    <string name="device_replacement">Device Replacement</string>
    <string name="device_replacement_select">Select the device to be replaced in the following list</string>
    <string name="device_replacement_0_all">List of all devices</string>
    <string name="device_replacement_0_type">List of similar devices</string>
    <string name="device_replacement_apply" formatted="false">Do replace the device \"%dev_name%\" by another device of same type %dev_type%?</string>
    <string name="device_replacement_select_new">Select the new device in the following list</string>
    <string name="device_replacement_nodevice_error">No similar device</string>
    <string name="device_replacement_error">Error during device replacement: </string>
    <string name="device_replacement_ok" formatted="false">Device replacement performed. You can uninstall device \"%dev_name%\"</string>
    <string name="device_details_info">Informations:</string>
    <string name="device_details_asso">Could be used by:</string>
    <string name="device_details_check">Check the device:</string>
    <string name="device_details_state">Status:</string>
    <string name="device_details_btn_update">Update associations</string>
    <string name="device_details_btn_asso">Manage permissions</string>
    <string name="device_details_btn_store">Subscribe to new services\nfor your devices</string>
    <string name="device_details_msg_eject">Do you really want to disconnect this device?\n\nAssociated applications with this device could be affected.</string>
    <string name="device_details_msg_eject_title">Disconnect this device</string>
    <string name="device_details_permissions_update_title">Permissions update</string>
    <string name="device_details_permissions_update_msg">During the permissions update, the selected applications will restart.\n\nDo you want to perform the update?</string>
    <string name="device_details_no_access_rights">You are not allowed to access this device</string>
    <string name="device_details_no_access_rights_title">Device Access</string>
    <string name="devices_addnewone_title">Install a new device</string>
    <string name="devices_addnewone_dev_type">Which type of device would you like to install?</string>
    <string name="devices_addnewone_dev_procedure">Installation procedure:</string>
    <string name="devices_addnewone_dev_type_zigbee">ZigBee</string>
    <string name="devices_addnewone_dev_type_x3d">X3D</string>
    <string name="devices_addnewone_dev_type_greennet">GreenNet</string>
    <string name="devices_addnewone_dev_type_upnp">UPnP</string>
    <string name="devices_addnewone_dev_type_agora">Agora</string>
    <string name="devices_addnewone_dev_agora_msg">You just have to connect your Agora device on the network.\n\nIt will be automatically discovered by your HAB.</string>
    <string name="devices_addnewone_dev_upnp_msg">You just have to connect your Upnp device on the network.\n\nIt will be automatically discovered by your HAB.</string>
    <string name="devices_addnewone_dev_zigbee_msg" formatted="false">While adding an element in the Zigbee network requires the activation of \"pairing mode\" at its coordinator\n\nTo do this, follow these steps:</string>
    <string name="devices_addnewone_dev_step_1">1 - </string>
    <string name="devices_addnewone_dev_step_2">2 - </string>
    <string name="devices_addnewone_dev_step_3">3 - </string>
    <string name="devices_addnewone_dev_step_4">4 - </string>
    <string name="devices_addnewone_dev_zigbee_submsg_1">Check that the Zigbee coordinator is plugged into the USB port on your HAB</string>
    <string name="devices_addnewone_dev_zigbee_submsg_2" formatted="false">Activate the \"pairing mode\" of your coordinator</string>
    <string name="devices_addnewone_dev_zigbee_submsg_2_1">. If your coordinator has a pairing button, press it.</string>
    <string name="devices_addnewone_dev_zigbee_submsg_2_2">. Otherwise, press the generic pairing button on your HAB.</string>
    <string name="devices_addnewone_dev_zigbee_submsg_3" formatted="false">Connect your new ZigBee device on the network and activate his \"pairing mode\". (see instructions)</string>
    <string name="devices_addnewone_dev_zigbee_submsg_4">The pairing will occur between your coordinator and the new device. Once completed, your device will be visible and functional.</string>
    <string name="application_simple_name">APP NAME</string>
    <string name="application_simple_version">Version:</string>
    <string name="application_simple_state">Status:</string>
    <string name="application_simple_details">Details</string>
    <string name="application_simple_noasso">there is no associated device with this application</string>
    <string name="application_simple_update">an update is available</string>
    <string name="application_show_details">more details</string>
    <string name="application_remove_asso" formatted="false">remove association</string>
    <string name="application_config_title" formatted="false">\"%app_name%\" configuration</string>
    <string name="application_details_servicename">Service:</string>
    <string name="application_details_serviceversion">Service version:</string>
    <string name="application_details_title">Application</string>
    <string name="application_details_info">Information:</string>
    <string name="application_details_compo">Composition:</string>
    <string name="application_details_version">Version:</string>
    <string name="application_details_state">Status:</string>
    <string name="application_details_installdate">Installation date:</string>
    <string name="application_details_resources">Used resources:</string>
    <string name="application_details_resource_unavailable">unavailable</string>
    <string name="application_details_ram">RAM:</string>
    <string name="application_details_cpu">CPU (time):</string>
    <string name="application_details_threads">Threads count:</string>
    <string name="application_details_sockets">Sockets count:</string>
    <string name="application_details_flash">Flash size:</string>
    <string name="application_details_bandwidth">Bandwidth:</string>
    <string name="application_details_ram_value" formatted="false">%VALUE% bytes</string>
    <string name="application_details_cpu_value" formatted="false">%VALUE% %</string>
    <string name="application_details_threads_value" formatted="false">%VALUE% thread(s)</string>
    <string name="application_details_sockets_value" formatted="false">%VALUE% socket(s)</string>
    <string name="application_details_flash_value" formatted="false">%VALUE% bytes</string>
    <string name="application_details_bandwidth_value" formatted="false">%VALUE% bytes/s</string>
    <string name="application_details_update">Update:</string>
    <string name="application_details_update_btn">Update</string>
    <string name="application_details_update_msg1">An update is available.</string>
    <string name="application_details_update_msg2">During the update, the application will be momentarily out.</string>
    <string name="application_details_config">Configuration:</string>
    <string name="application_details_config_btn">Configure</string>
    <string name="application_details_permissions">Permissions:</string>
    <string name="application_details_bundle_3rd">Partners</string>
    <string name="application_details_bundle_op">Operator</string>
    <string name="application_details_monitoring_activated">The application\'s resources monitoring is activated</string>
    <string name="application_details_monitoring_unactivated">The application\'s resources monitoring is disabled</string>
    <string name="dialog_btn_cancel">Cancel</string>
    <string name="dialog_btn_validate">Validate</string>
    <string name="config_devices">Associated Devices</string>
    <string name="config_application">Application</string>
    <string name="settings_activateWizard">Active all wizards</string>
    <string name="settings_version">dasboard version: %version%</string>
    <string name="settings_language_en">english</string>
    <string name="settings_language_fr">français</string>
    <string name="login_cse_login">Login</string>
    <string name="login_cse_pwd">Password</string>
    <string name="settings_cse">CSE</string>
    <string name="settings_cse_hostname">Hostname</string>
    <string name="settings_cse_port">Port</string>
    <string name="settings_cse_cseId">CSE Id</string>
    <string name="settings_cse_cseName">CSE Name</string>
    <string name="settings_device_name">Device Name</string>
    <string name="device_name_with_alias">Using SDT alias name property (pDANe)</string>
    <string name="device_name_with_name">Using SDT name property (prDNe)</string>
</resources>