<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2013, 2017 Orange.
    All rights reserved. This program and the accompanying materials
    are made available under the terms of the Eclipse Public License v1.0
    which accompanies this distribution, and is available at
    http://www.eclipse.org/legal/epl-v10.html
   
    Contributors:
       BAREAU Cyrille <cyrille.bareau@orange.com>, 
       BONNARDEL Gregory <gbonnardel.ext@orange.com>, 
       BOLLE Sebastien <sebastien.bolle@orange.com>.
 -->

<LinearLayout xmlns:custom="http://schemas.android.com/apk/res/org.eclipse.om2m.android.dashboard"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/soft_gray" >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/otb_white_gear" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:text="@string/settings_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:text="@string/settings_version"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="15sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical" >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" >

                <LinearLayout
                    android:id="@+id/ll_settings_cse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_settings_cse"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/settings_cse"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp" >

                        <TextView
                            android:id="@+id/tv_settings_cse_url_label"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="60dp"
                            android:text="@string/settings_cse_hostname"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/et_settings_cse_hostname"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="text"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="60dp"
                            android:text="@string/settings_cse_port"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/et_settings_cse_port"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="number"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp" >

                        <TextView
                            android:id="@+id/tv_settings_cse_cseId_label"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="60dp"
                            android:text="@string/settings_cse_cseId"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/et_settings_cse_cseId"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="text"
                            android:textSize="14sp" />

                        <TextView
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="60dp"
                            android:text="@string/settings_cse_cseName"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/et_settings_cse_cseName"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="text"
                            android:textSize="14sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp" >

                        <TextView
                            android:id="@+id/tv_settings_cse_login"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="60dp"
                            android:text="@string/login_cse_login"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/et_settings_cse_login"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="text"
                            android:textSize="14sp" />

                        <TextView
                            android:id="@+id/tv_settings_cse_pwd"
                            android:layout_width="150dp"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="60dp"
                            android:text="@string/login_cse_pwd"
                            android:textAppearance="?android:attr/textAppearanceLarge"
                            android:textSize="14sp" />

                        <EditText
                            android:id="@+id/et_settings_cse_pwd"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="20dp"
                            android:layout_marginRight="20dp"
                            android:layout_weight="1"
                            android:ems="10"
                            android:inputType="number"
                            android:textSize="14sp" />
                    </LinearLayout>
                </LinearLayout>

                <org.eclipse.om2m.android.dashboard.tools.CustomLineView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="25dp"
                    custom:dashGap="2"
                    custom:dashWidth="2"
                    custom:dashed="true"
                    custom:orientation="horizontal"
                    custom:thickness="1"
                    custom:color="@color/gray" />

                <LinearLayout
                    android:id="@+id/ll_settings_device_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/tv_settings_device_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/settings_device_name"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textSize="16sp" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical" >

                        <RadioGroup
                            android:id="@+id/radioGroup1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" >

                            <RadioButton
                                android:id="@+id/rb_device_name_with_alias"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:checked="true"
                                android:text="@string/device_name_with_alias" />

                            <RadioButton
                                android:id="@+id/rb_device_name_with_name"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/device_name_with_name" />
                        </RadioGroup>

                    </LinearLayout>

                </LinearLayout>

                <org.eclipse.om2m.android.dashboard.tools.CustomLineView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="25dp"
                    custom:dashGap="2"
                    custom:dashWidth="2"
                    custom:dashed="true"
                    custom:orientation="horizontal"
                    custom:thickness="1"
                    custom:color="@color/gray" />

                <CheckBox
                    android:id="@+id/cb_settings_wizards"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/settings_activateWizard"
                    android:textSize="16sp" />

                <org.eclipse.om2m.android.dashboard.tools.CustomLineView
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginBottom="25dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginTop="25dp"
                    custom:dashGap="2"
                    custom:dashWidth="2"
                    custom:dashed="true"
                    custom:orientation="horizontal"
                    custom:thickness="1"
                    custom:color="@color/gray" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" >

                    <RadioButton
                        android:id="@+id/rd_language_en"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/settings_language_en"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/rd_language_fr"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="20dp"
                        android:text="@string/settings_language_fr"
                        android:textSize="16sp" />
                </RadioGroup>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_marginBottom="100dp"
                    android:layout_marginTop="20dp" >

                    <Button
                        android:id="@+id/btn_settings_validate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="50dp"
                        android:layout_marginRight="25dp"
                        android:layout_weight="1"
                        android:background="@drawable/sel_button_green"
                        android:text="@string/dialog_btn_validate" />

                    <Button
                        android:id="@+id/btn_settings_cancel"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="25dp"
                        android:layout_marginRight="50dp"
                        android:layout_weight="1"
                        android:background="@drawable/sel_button_red"
                        android:text="@string/dialog_btn_cancel" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>