<?xml version="1.0" encoding="utf-8"?>
<!--
    Copyright (c) 2013, 2017 Orange.
    All rights reserved. This program and the accompanying materials
    are made available under the terms of the Eclipse Public License v1.0
    which accompanies this distribution, and is available at
    http://www.eclipse.org/legal/epl-v10.html
   
    Contributors:
       BAREAU Cyrille <cyrille.bareau@orange.com>, 
       BONNARDEL Gregory <gbonnardel.ext@orange.com>, 
       BOLLE Sebastien <sebastien.bolle@orange.com>.
 -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/apk/res/com.orange.openthebox.dashboard"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/solf_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/otb_orange" >

        <ImageView
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/otb_white_gear" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:text="@string/config_title"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/otb_orange"
        android:orientation="horizontal"
        android:visibility="gone" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="50dp"
            android:layout_weight="1"
            android:text="@string/config_application"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginRight="70dp"
            android:text="@string/config_devices"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/white" />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
        
	        <LinearLayout
	            android:id="@+id/ll_config_container"
	            android:layout_width="match_parent"
	            android:layout_height="wrap_content"
	            android:orientation="vertical"
	            android:paddingBottom="20dp"
        		android:animateLayoutChanges="true" >
	
	        </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>